[tool.poetry]
name = "django"
version = "0.1.0"
description = ""
authors = ["Darth <der363@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
keepalive = "^0.5"
python-dotenv = "^0.15.0"
flask = "^1.1.2"
discord = "^1.0.1"
praw = "^7.1.4"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
